Finished Tribute Page project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
                 max-width: 100%;
                 height: auto;
                 align-self: center;
+                overflow: hidden;
+            }
+            #title {
+                text-align: center;
             }
         </style>
     </head>
@@ -25,9 +29,20 @@
                 <figcaption id="img-caption">Icon of St.Ignatius</figcaption>
             </figure>
             </div>
-            <p id="tribute-info">This will be some text 
-                about the life & faith of St. Ignatius</p>
-                <a href="#" target="_blank" id="tribute-link">Additional Information</a>
+            <p id="tribute-info">It is said Ignatius converted to Christianity
+                at a young age. 
+                Tradition identifies Ignatius, along with his friend Polycarp, 
+                as disciples of John the Apostle. Later in his life, 
+                Ignatius was chosen to serve as Bishop of Antioch; the fourth-century 
+                Church historian Eusebius writes that Ignatius succeeded Evodius.
+                Theodoret of Cyrrhus claimed that St. Peter himself left directions that 
+                Ignatius be appointed to the episcopal see of Antioch.
+                Ignatius called himself Theophorus (God Bearer). A tradition arose 
+                that he was one of the children whom Jesus Christ took in his arms 
+                and blessed.</br>
+                <a href="https://en.wikipedia.org/wiki/Ignatius_of_Antioch" 
+                target="_blank" id="tribute-link">
+                Click here for additional Information</a></p>
         </main>
     </body>
 </html>
